src/objects/Ubicacion__c.object
<CustomObject>
    <description>Listado que contiene: País, estados y municipios</description>
    <fields>
        <fullName>Abreviatura__c</fullName>
        <description>Aplica para estado</description>
        <externalId>true</externalId>
        <label>Abreviatura</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Baja__c</fullName>
        <description>Aplica para país, los valores que se mostraran, si baja=S no se muestra</description>
        <label>Baja</label>
        <picklist>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cabecera__c</fullName>
        <description>Aplica para municipio</description>
        <label>Cabecera</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capital__c</fullName>
        <label>Capital</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IdEstadoPais__c</fullName>
        <description>Aplica para municipio y estado</description>
        <label>Id Estado/País</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdUbicacion__c</fullName>
        <label>Id</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TipoUbicacion__c</fullName>
        <label>Tipo</label>
        <picklist>
            <picklistValues>
                <fullName>Estado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>País</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Ubicación</label>
    <listViews>
        <fullName>All</fullName>
        <columns>IdUbicacion__c</columns>
        <columns>NAME</columns>
        <columns>TipoUbicacion__c</columns>
        <columns>Abreviatura__c</columns>
        <columns>Baja__c</columns>
        <columns>Cabecera__c</columns>
        <columns>Capital__c</columns>
        <columns>IdEstadoPais__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Nombre de Ubicación</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ubicaciones</pluralLabel>
    <recordTypes>
        <fullName>Estado</fullName>
        <active>true</active>
        <label>Estado</label>
    </recordTypes>
    <recordTypes>
        <fullName>Municipio</fullName>
        <active>true</active>
        <label>Municipio</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pais</fullName>
        <active>true</active>
        <label>Pais</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>